<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maple_ros2</name>
  <version>0.1.0</version>
  <description>
    ROS 2 wrapper for MAPLE (Model and Policy Learning Evaluation).
    Bridges MAPLE's containerized VLA policy serving and simulation
    environments into the ROS 2 ecosystem with native topic, service,
    and action interfaces.
  </description>
  <maintainer email="sis_shaswat@outlook.com">Shaswat Garg</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>maple_ros2_msgs</depend>

  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>